# hybrid_mpc_mhe

./: .gitignore  CMakeLists.txt  README.md  dependencies.yaml  mhe_tuning_notes.txt  package.xml  prepare_env.sh  requirements.txt
config/arena/: arena_limits.yaml  arena_run.yaml  arena_traj_options.yaml
config/gazebo/: basic.world  gazebo_limits.yaml  gazebo_run.yaml  gazebo_traj_options.yaml  white_background.world
launch/arena/: mocap_odom_wrapper.launch
launch/gazebo/: quadrotor_empty_world.launch
launch/mavros/: px4.launch  px4_config.yaml  px4_pluginlists.yaml
launch/mhe/: dynamic_mhe.launch  kinematic_mhe.launch
launch/mhe_mpc/: mhe_mpc.launch
launch/mpc/: mpc.launch
launch/trajectory/: traj_publisher.launch
launch/visualize/: visualizer_node.launch
models/gz_vwu_vw/: model.pth  model_params_2.pkl
models/gz_vwu_vwu/: model.pth  model_params.pkl
msg/: ModelCorrection.msg  QuadSensor.msg
quads/clara/: clara.xacro  clara_dmhe.yaml  clara_kmhe.yaml  clara_mpc.yaml
quads/clark/: clark.xacro  clark_kmhe.yaml  clark_mpc.yaml
quads/hummingbird/: hummingbird.xacro  hummingbird_dmhe.yaml  hummingbird_kmhe.yaml  hummingbird_mpc.yaml
results/gazebo_mhe_kinematic_gp_False_0.5_50_lemniscate/: train_data.pkl
src/gp/: GPDataset.py  GPyModelWrapper.py  gp_cassadi.py  gp_utils.py  gpy_model.py  train_gp.py
src/mhe/: mhe_node.py  quad_optimizer_mhe.py
src/mocap/: mocap_odom_node.py
src/model_fitting/: DenseModel.py  FlightDataset.py  NeuralODE.py  batch.sh  data_params.txt  load_data.py  model_params.txt  test.py  train_nn.py
(+98 files in other folders)
